GoodLang/gen/com/itmo/obobrov/GoodLangParser.java
// Generated from D:/University/MT/GoodLang/src/com/itmo/obobrov\GoodLang.g4 by ANTLR 4.8
package com.itmo.obobrov;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GoodLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OTHERWISE=1, WHEN=2, DO=3, READ=4, WRITE=5, RET=6, ADD=7, SUB=8, MUL=9, 
		DIV=10, ASSIGN=11, WHILE=12, CONST=13, TRUE=14, FALSE=15, EQ=16, LT=17, 
		GT=18, LE=19, GE=20, NE=21, NOT=22, AND=23, OR=24, LSCOPE=25, RSCOPE=26, 
		LPAR=27, RPAR=28, DOTS=29, COMMA=30, AT=31, NAME=32, NL=33, BLANK=34;
	public static final int
		RULE_program = 0, RULE_entities = 1, RULE_function = 2, RULE_argument = 3, 
		RULE_body = 4, RULE_when = 5, RULE_whenBody = 6, RULE_elseBranch = 7, 
		RULE_whenCond = 8, RULE_read = 9, RULE_write = 10, RULE_ret = 11, RULE_assigment = 12, 
		RULE_loop = 13, RULE_orCondition = 14, RULE_andCondition = 15, RULE_condition = 16, 
		RULE_cmp = 17, RULE_expression = 18, RULE_multiplier = 19, RULE_element = 20, 
		RULE_call = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "entities", "function", "argument", "body", "when", "whenBody", 
			"elseBranch", "whenCond", "read", "write", "ret", "assigment", "loop", 
			"orCondition", "andCondition", "condition", "cmp", "expression", "multiplier", 
			"element", "call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'otherwise'", "'when'", "'do'", "'<-'", "'->'", "'ret'", "'+'", 
			"'-'", "'*'", "'/'", "'='", "'while'", null, "'True'", "'False'", "'=='", 
			"'<'", "'>'", "'<='", "'>='", "'!='", "'!'", "'and'", "'or'", "'{'", 
			"'}'", "'('", "')'", "':'", "','", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OTHERWISE", "WHEN", "DO", "READ", "WRITE", "RET", "ADD", "SUB", 
			"MUL", "DIV", "ASSIGN", "WHILE", "CONST", "TRUE", "FALSE", "EQ", "LT", 
			"GT", "LE", "GE", "NE", "NOT", "AND", "OR", "LSCOPE", "RSCOPE", "LPAR", 
			"RPAR", "DOTS", "COMMA", "AT", "NAME", "NL", "BLANK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoodLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoodLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<TerminalNode> EOF() { return getTokens(GoodLangParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(GoodLangParser.EOF, i);
		}
		public List<TerminalNode> NL() { return getTokens(GoodLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GoodLangParser.NL, i);
		}
		public List<EntitiesContext> entities() {
			return getRuleContexts(EntitiesContext.class);
		}
		public EntitiesContext entities(int i) {
			return getRuleContext(EntitiesContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(44);
				match(NL);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(50);
				entities();
				setState(57);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NL:
					{
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(51);
						match(NL);
						}
						}
						setState(54); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NL );
					}
					break;
				case EOF:
					{
					setState(56);
					match(EOF);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntitiesContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public EntitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entities; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterEntities(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitEntities(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitEntities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntitiesContext entities() throws RecognitionException {
		EntitiesContext _localctx = new EntitiesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entities);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(GoodLangParser.AT, 0); }
		public TerminalNode NAME() { return getToken(GoodLangParser.NAME, 0); }
		public TerminalNode LSCOPE() { return getToken(GoodLangParser.LSCOPE, 0); }
		public TerminalNode RSCOPE() { return getToken(GoodLangParser.RSCOPE, 0); }
		public TerminalNode LPAR() { return getToken(GoodLangParser.LPAR, 0); }
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(GoodLangParser.RPAR, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(GoodLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GoodLangParser.COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(AT);
			setState(69);
			match(NAME);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(70);
				match(LPAR);
				setState(71);
				argument();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(72);
					match(COMMA);
					setState(73);
					argument();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79);
				match(RPAR);
				}
			}

			setState(83);
			match(LSCOPE);
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(84);
				body();
				}
				break;
			}
			setState(87);
			match(RSCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GoodLangParser.NAME, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(GoodLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GoodLangParser.NL, i);
		}
		public List<LoopContext> loop() {
			return getRuleContexts(LoopContext.class);
		}
		public LoopContext loop(int i) {
			return getRuleContext(LoopContext.class,i);
		}
		public List<AssigmentContext> assigment() {
			return getRuleContexts(AssigmentContext.class);
		}
		public AssigmentContext assigment(int i) {
			return getRuleContext(AssigmentContext.class,i);
		}
		public List<RetContext> ret() {
			return getRuleContexts(RetContext.class);
		}
		public RetContext ret(int i) {
			return getRuleContext(RetContext.class,i);
		}
		public List<CallContext> call() {
			return getRuleContexts(CallContext.class);
		}
		public CallContext call(int i) {
			return getRuleContext(CallContext.class,i);
		}
		public List<ReadContext> read() {
			return getRuleContexts(ReadContext.class);
		}
		public ReadContext read(int i) {
			return getRuleContext(ReadContext.class,i);
		}
		public List<WriteContext> write() {
			return getRuleContexts(WriteContext.class);
		}
		public WriteContext write(int i) {
			return getRuleContext(WriteContext.class,i);
		}
		public List<WhenContext> when() {
			return getRuleContexts(WhenContext.class);
		}
		public WhenContext when(int i) {
			return getRuleContext(WhenContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(99);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						setState(91);
						loop();
						}
						break;
					case 2:
						{
						setState(92);
						assigment();
						}
						break;
					case 3:
						{
						setState(93);
						ret();
						}
						break;
					case 4:
						{
						setState(94);
						call();
						}
						break;
					case 5:
						{
						setState(95);
						read();
						}
						break;
					case 6:
						{
						setState(96);
						write();
						}
						break;
					case 7:
						{
						setState(97);
						when();
						}
						break;
					case 8:
						{
						}
						break;
					}
					setState(101);
					match(NL);
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenContext extends ParserRuleContext {
		public TerminalNode WHEN() { return getToken(GoodLangParser.WHEN, 0); }
		public TerminalNode LSCOPE() { return getToken(GoodLangParser.LSCOPE, 0); }
		public WhenBodyContext whenBody() {
			return getRuleContext(WhenBodyContext.class,0);
		}
		public TerminalNode RSCOPE() { return getToken(GoodLangParser.RSCOPE, 0); }
		public WhenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_when; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterWhen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitWhen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitWhen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenContext when() throws RecognitionException {
		WhenContext _localctx = new WhenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_when);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(WHEN);
			setState(108);
			match(LSCOPE);
			setState(109);
			whenBody();
			setState(110);
			match(RSCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenBodyContext extends ParserRuleContext {
		public List<WhenCondContext> whenCond() {
			return getRuleContexts(WhenCondContext.class);
		}
		public WhenCondContext whenCond(int i) {
			return getRuleContext(WhenCondContext.class,i);
		}
		public ElseBranchContext elseBranch() {
			return getRuleContext(ElseBranchContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(GoodLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GoodLangParser.NL, i);
		}
		public WhenBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterWhenBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitWhenBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitWhenBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenBodyContext whenBody() throws RecognitionException {
		WhenBodyContext _localctx = new WhenBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whenBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112);
					whenCond();
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(118);
				elseBranch();
				}
				break;
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(121);
				match(NL);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseBranchContext extends ParserRuleContext {
		public TerminalNode OTHERWISE() { return getToken(GoodLangParser.OTHERWISE, 0); }
		public TerminalNode DO() { return getToken(GoodLangParser.DO, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode LSCOPE() { return getToken(GoodLangParser.LSCOPE, 0); }
		public TerminalNode RSCOPE() { return getToken(GoodLangParser.RSCOPE, 0); }
		public TerminalNode NL() { return getToken(GoodLangParser.NL, 0); }
		public ElseBranchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseBranch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterElseBranch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitElseBranch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitElseBranch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseBranchContext elseBranch() throws RecognitionException {
		ElseBranchContext _localctx = new ElseBranchContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elseBranch);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OTHERWISE:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(127);
				match(OTHERWISE);
				setState(128);
				match(DO);
				setState(135);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LSCOPE:
					{
					{
					setState(129);
					match(LSCOPE);
					setState(131);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(130);
						body();
						}
						break;
					}
					setState(133);
					match(RSCOPE);
					}
					}
					break;
				case WHEN:
				case RET:
				case ADD:
				case SUB:
				case WHILE:
				case CONST:
				case RSCOPE:
				case LPAR:
				case NAME:
				case NL:
					{
					setState(134);
					body();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case NL:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhenCondContext extends ParserRuleContext {
		public OrConditionContext orCondition() {
			return getRuleContext(OrConditionContext.class,0);
		}
		public TerminalNode DO() { return getToken(GoodLangParser.DO, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode LSCOPE() { return getToken(GoodLangParser.LSCOPE, 0); }
		public TerminalNode RSCOPE() { return getToken(GoodLangParser.RSCOPE, 0); }
		public TerminalNode NL() { return getToken(GoodLangParser.NL, 0); }
		public WhenCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenCond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterWhenCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitWhenCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitWhenCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenCondContext whenCond() throws RecognitionException {
		WhenCondContext _localctx = new WhenCondContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whenCond);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ADD:
			case SUB:
			case CONST:
			case TRUE:
			case FALSE:
			case NOT:
			case LPAR:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(140);
				orCondition();
				setState(141);
				match(DO);
				setState(148);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LSCOPE:
					{
					{
					setState(142);
					match(LSCOPE);
					setState(144);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						setState(143);
						body();
						}
						break;
					}
					setState(146);
					match(RSCOPE);
					}
					}
					break;
				case OTHERWISE:
				case WHEN:
				case RET:
				case ADD:
				case SUB:
				case WHILE:
				case CONST:
				case TRUE:
				case FALSE:
				case NOT:
				case RSCOPE:
				case LPAR:
				case NAME:
				case NL:
					{
					setState(147);
					body();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case NL:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GoodLangParser.NAME, 0); }
		public TerminalNode READ() { return getToken(GoodLangParser.READ, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(NAME);
			setState(154);
			match(READ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode WRITE() { return getToken(GoodLangParser.WRITE, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitWrite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			expression();
			setState(157);
			match(WRITE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public TerminalNode RET() { return getToken(GoodLangParser.RET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodLangListener ) ((GoodLangListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodLangVisitor ) return ((GoodLangVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ret);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(RET);
			setState(160);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
